# ctf-evals-core

./: .gitignore  README.md  pyproject.toml  readme.md
.github/workflows/: ci.yml  test.yml  type-check.yml
ctf_evals_core/: __init__.py  dataset.py  model.py  task.py
docs/: mkdocs.yaml  pyproject.toml
docs/docs/: index.md
example/: .env.example  pyproject.toml  test_multiple_tasks.py  test_run_challenges.py
example/challenges/example_01_hello_world/: challenge.yaml
example/challenges/example_02_copy_files/: challenge.yaml
example/challenges/example_03_network/: challenge.yaml
example/challenges/example_03_network/solution/: solution.sh
example/challenges/example_04_volume/: challenge.yaml  compose.yaml
example/challenges/example_05_create_file/: challenge.yaml
example/scripts/: build_all_images.sh  build_single_image.sh  list_all_images.sh
src/ctf_evals_core/: __init__.py  _registry.py  dataset.py  model.py  solve.py  task.py
src/ctf_evals_core/_cli/: build_images.py  main.py
src/ctf_evals_core/_scorers/: lax_includes.py
src/ctf_evals_core/_solvers/: basic_agent.py  qa.py
src/ctf_evals_core/_util/: docker.py  utils.py
src/ctf_evals_core/images/agent-environment/: Dockerfile
src/ctf_evals_core/solvers/: basic_agent.py  qa.py
src/ctf_evals_tests/: test_validate_challenge_yaml.py  test_validate_compose_yaml.py  utils.py
src/inspect_ctf/: __init__.py  _registry.py  dataset.py  task.py
src/inspect_ctf/_cli/: build_images.py  main.py
src/inspect_ctf/_util/: docker.py
tests/: test_dataset.py  test_docker.py  test_lax_includes.py
tests/test_tree/challenges/1/: challenge.yaml
tests/test_tree/challenges/2/: challenge.yaml
