[tool.poetry]
name = "inspect-ctf-docs"
version = "0.1.0"
description = "Docs site for inspect_ctf"
authors = ["UK AI Safety Institute"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.5.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
