[tool.poetry]
name = "ctf-evals-example"
version = "0.1.0"
description = "A template repo for CTF challenges"
authors = [""]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ctf_evals_core = { path = "..", develop = true }
aisitools = {git = "https://github.com/AI-Safety-Institute/aisi-inspect-tools.git"}
openai = "^1.60.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[tool.ruff.lint]
select = ["E",   # pycodestyle errors
          "W",   # pycodestyle warnings
          "F",   # flake8
          "D",   # pydocstyle
          "I",   # isort
          # "RET", # flake8-return
          # "RUF", # ruff rules
        ]
ignore = ["E203", "D10", "D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
# The images dir may contain multiple modules with the same name (e.g. server.py).
exclude = [
  "images",
  "solve.py",
  "resources",
]

[[tool.mypy.overrides]]
# agent_framework is an optional AISI-internal dependency
module = "agent_framework.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--pyargs ctf_evals_tests"
